manifests/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kiebex
  namespace: kiebex
  labels:
    app: kiebex
  annotations:
    argocd.argoproj.io/sync-wave: "2"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kiebex
  template:
    metadata:
      labels:
        app: kiebex
    spec:
      containers:
        - name: kiebex
          image: ghcr.io/h1ghbre4k3r/kiebex:d064622957127ac0a07fe916c8e73c40e1e8d004
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
          readinessProbe:
            httpGet:
              path: /api/v1/health
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 10
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /api/v1/health
              port: 3000
            initialDelaySeconds: 15
            periodSeconds: 20
            failureThreshold: 5
      restartPolicy: Always
