manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: kiebex-service
  name: kiebex-service
  namespace: kiebex
spec:
  ports:
    - protocol: TCP
      name: web
      port: 80
  selector:
    io.kompose.service: kiebex-deployment
status:
  loadBalancer: {}
